Expand skill list

--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
         <div class="icon-image mail-icon"></div>
         <span>Contact</span>
       </div>
+      <div class="icon" data-window="weather-window">
+        <div class="icon-image weather-icon"></div>
+        <span>Weather</span>
+      </div>
     </div>
 
     <!-- Profile window -->
@@ -38,17 +42,19 @@
       <div class="window-content">
         <h2>Hi, I’m Ilja</h2>
         <p>
-          I’m a developer who loves building things and experimenting with code.
-          I enjoy learning new technologies and creating small projects to explore ideas.
+          I am a final-year information systems student at Haaga-Helia focusing on digital services. I enjoy building and updating websites, pick up new tools quickly, and like solving technical problems.
         </p>
         <p>
-          You can find some of my work in the <strong>Projects</strong> window,
-          and if you’d like to reach out, open the <strong>Contact</strong> window.
+          I’m looking for an internship where I can grow my skills and help with web and digital service work. I’m also curious about IoT and robotics, and hands-on projects with hardware and sensors really interest me. You can find some of my work in the <strong>Projects</strong> window, and if you’d like to reach out, open the <strong>Contact</strong> window.
         </p>
         <h3>Skills</h3>
         <ul class="xp-list">
-          <li>HTML, CSS</li>
+          <li>HTML</li>
+          <li>CSS</li>
           <li>JavaScript</li>
+          <li>Arduino IDE</li>
+          <li>Arduino</li>
+          <li>Robotics</li>
         </ul>
       </div>
     </div>
@@ -136,7 +142,13 @@
         <ul class="xp-list">
           <li>
             <strong>Email:</strong>
-            <a href="mailto:youremail@example.com">youremail@example.com</a>
+            <a href="mailto:iljamalinin1@gmail.com">iljamalinin1@gmail.com</a>
+          </li>
+          <li>
+            <strong>LinkedIn:</strong>
+            <a href="https://www.linkedin.com/in/ilja-malinin/" target="_blank" rel="noopener noreferrer">
+              linkedin.com/in/ilja-malinin
+            </a>
           </li>
           <li>
             <strong>GitHub:</strong>
