Updated portfolio content once agaaiiiin :P

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <meta name="description" content="Windows XP-style portfolio desktop for Ilja Malinin with projects, contact, live weather, and a cat site preview." />
   <title>Ilja |  Portfolio</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="styles.css" />
@@ -30,7 +31,7 @@
       </div>
       <div class="icon" data-window="cat-window">
         <div class="icon-image cat-icon"></div>
-        <span>Cat Site</span>
+        <span>KissaSivust0</span>
       </div>
     </div>
 
@@ -172,14 +173,14 @@
     <!-- Cat site window (embedded) -->
     <div class="window" id="cat-window">
       <div class="window-titlebar">
-        <span class="window-title">Cat Site (embedded)</span>
+        <span class="window-title">KissaSivust0</span>
         <div class="window-controls">
           <button class="btn-minimize">_</button>
           <button class="btn-close">X</button>
         </div>
       </div>
       <div class="window-content cat-window-content">
-        <h2>Cat Site</h2>
+        <h2>KissaSivust0</h2>
         <p class="cat-warning">Embedded view of the KissaSivust0 project (GitHub Pages). Loading this preview may affect performance on slower devices.</p>
         <p><a href="https://xx-ilja-xx.github.io/KissaSivust0.github.io/" target="_blank" rel="noopener noreferrer">Open in new tab</a></p>
         <iframe
